# ParallelTest

./: CMakeLists.txt  accumulte.hpp  main.cpp
